# XCache

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xcache_main.pro  xmake.lua  更新日志.md  每月版本号.md
XCache/: XCache.h  XCache.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  svgicons.qrc  xmake.lua
XCache/XCacheStart/: XCacheStart.cpp  XCacheStart.h
XCache/widgets/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  aboutgui.cpp  aboutgui.h  aboutgui.ui
xcache/: CMakeLists.txt
xcache-logo/test/: xcache-logo.pdn
xcache/source/: main.c  main.cpp
